--- a/pom.xml
+++ b/pom.xml
@@ -12,34 +12,35 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>25</java.version>
-        <maven.compiler.release>25</maven.compiler.release>
-
         <kotlin.version>2.0.0</kotlin.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.2</version>
         </dependency>
-
-        <!-- Jackson + Kotlin (очень рекомендуется) -->
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.17.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.weavechain</groupId>
+            <artifactId>bulletproofs-gadgets</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.weavechain</groupId>
+            <artifactId>bulletproofs</artifactId>
+            <version>1.0.11</version>
         </dependency>
     </dependencies>
 
@@ -57,7 +58,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <jvmTarget>25</jvmTarget>
+                            <jvmTarget>21</jvmTarget>
                         </configuration>
                     </execution>
                     <execution>
@@ -72,9 +73,6 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                </configuration>
             </plugin>
         </plugins>
     </build>
